ajustes de pagina de inicio y top faltanta

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@ Pendiente-Repetido -->
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a><img src="img/productos/producto15-3.jpg" class="img-responsive" alt=""/></a>
+					<img src="img/productos/producto15-3.jpg" class="img-responsive zoom-img" alt=""/>
 					<div class="text">
 						<a> Gomiricas de Naranja</a>
 					</div>
@@ -49,7 +49,7 @@ Pendiente-Repetido -->
 					</div>
 			</div>
 			<div class="blog-post">
-					<a><img src="img/productos/producto16-3.jpg" class="img-responsive" alt="  "/></a>
+					<img src="img/productos/producto16-3.jpg" class="img-responsive zoom-img" alt="  "/>
 					<div class="text">
 						<a> Gomirica de durazno</a>
 					</div>
@@ -60,7 +60,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto1-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto1-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a> Serpentina con saladillos</a>
 				</div>
@@ -69,7 +69,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto3-3.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto3-3.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Guayaba con chile</a>
 				</div>
@@ -80,7 +80,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto4-2.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto4-2.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a> Rielito con chile</a>
 				</div>
@@ -89,7 +89,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto5-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto5-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a> Gomirica de guzano</a>
 				</div>
