--- a/blog4.html
+++ b/blog4.html
@@ -5,7 +5,7 @@ Rialto con chile
 Gomirica de durazno
 Guayaba con chile
 Gomirica de guzano
---> Saladito con chile y limon
+Saladito con chile y limon
 Paleta con sal
 Salado adobado
 Salado con sal 
@@ -36,7 +36,7 @@ Pendiente-Repetido -->
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a><img src="img/productos/producto18-1.jpg" class="img-responsive" alt=""/></a>
+					<img src="img/productos/producto18-1.jpg" class="img-responsive zoom-img" alt=""/>
 					<div class="text">
 						<a>Chamoy con Ciruela</a>
 					</div>
@@ -45,7 +45,7 @@ Pendiente-Repetido -->
 					</div>
 			</div>
 			<div class="blog-post">
-					<a><img src="img/productos/producto19-1.jpg" class="img-responsive" alt="  "/></a>
+					<img src="img/productos/producto19-1.jpg" class="img-responsive zoom-img" alt="  "/>
 					<div class="text">
 						<a>Chamoy con Mango</a>
 					</div>
@@ -56,7 +56,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto20-2.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto20-2.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Tochomorocho</a>
 				</div>
@@ -65,7 +65,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto7-2.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto7-2.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a> Repetido</a>
 				</div>
@@ -76,7 +76,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto15-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto15-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Gomirica de Mango</a>
 				</div>
@@ -85,7 +85,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto11-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto11-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a> Repetido </a>
 				</div>
