--- a/inicio.html
+++ b/inicio.html
@@ -85,7 +85,7 @@
 		<div class="special-grids">
 			<div class="col-md-6 special-left l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/productos/sabroricos-29.jpg" alt=""/>
+						<img src="images/productos/sabroricos-29.jpg" alt="" class="zoom-img"/>
 						<figcaption>
 							<h4>SALADITOS SABRORICOS: Gomiricas</h4>
 							<p>Gomiricas de naranja chile y limon, lokoalate con su inigualable sabor.</p>			
@@ -106,7 +106,7 @@
 			</div>
 			<div class="col-md-6 special-left l-right l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/productos/sabroricos-28.jpg" alt=""/>
+						<img src="images/productos/sabroricos-28.jpg" alt="" class="zoom-img"/>
 						<figcaption>
 							<h4>SALADITOS SABRORICOS: Gomiricas</h4>
 							<p>Gomiricas de sandia con chile y limon</p>			
@@ -169,8 +169,9 @@
 			</div>
 		</div>
 		<div class="col-md-6 events-left text-center">
-			<img src="images/productos/sabroricos-32.jpg" alt="" />
-			<img src="images/productos/sabroricos-15.jpg" alt="" />
+			<img src="images/productos/sabroricos-32.jpg" alt="" class="zoom-img"/>
+			<img src="images/productos/sabroricos-15.jpg" alt="" class="zoom-img"/>
+			
 		</div>
 		<div class="clearfix"></div>
 	</div>
