--- a/blog2.html
+++ b/blog2.html
@@ -39,7 +39,7 @@ Pendiente-Repetido -->
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a><img src="img/productos/producto6-1.jpg" class="img-responsive" alt=""/></a>
+					<img src="img/productos/producto6-1.jpg" class="img- zoom-imgresponsive" alt=""/>
 					<div class="text">
 						<a> Saladito con Chile y Limon</a>
 					</div>
@@ -48,7 +48,7 @@ Pendiente-Repetido -->
 					</div>
 			</div>
 			<div class="blog-post">
-					<a><img src="img/productos/producto7-1.jpg" class="img-responsive" alt="  "/></a>
+					<img src="img/productos/producto7-1.jpg" class="img-responsive zoom-img" alt="  "/>
 					<div class="text">
 						<a>Saladito con sal</a>
 					</div>
@@ -59,7 +59,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto8-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto8-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Paleta con sal</a>
 				</div>
@@ -68,7 +68,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto9-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto9-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Producto repetido</a>
 				</div>
@@ -79,7 +79,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto10-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto10-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Salado adobado</a>
 				</div>
@@ -88,7 +88,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto11-2.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto11-2.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Mango con chile</a>
 				</div>
