--- a/blog3.html
+++ b/blog3.html
@@ -5,7 +5,7 @@ Rialto con chile
 Gomirica de durazno
 Guayaba con chile
 Gomirica de guzano
---> Saladito con chile y limon
+Saladito con chile y limon
 Paleta con sal
 Salado adobado
 Salado con sal 
@@ -36,7 +36,7 @@ Pendiente-Repetido -->
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a><img src="img/productos/producto12-2.jpg" class="img-responsive" alt=""/></a>
+					<img src="img/productos/producto12-2.jpg" class="img-responsive zoom-img" alt=""/>
 					<div class="text">
 						<a>Piña con Chile</a>
 					</div>
@@ -45,7 +45,7 @@ Pendiente-Repetido -->
 					</div>
 			</div>
 			<div class="blog-post">
-					<a><img src="img/productos/producto13-1.jpg" class="img-responsive" alt="  "/></a>
+					<img src="img/productos/producto13-1.jpg" class="img-responsive zoom-img" alt="  "/>
 					<div class="text">
 						<a>Pulpa tochito para escarchar</a>
 					</div>
@@ -56,7 +56,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto14-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto14-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Gomirica de Sandia</a>
 				</div>
@@ -65,7 +65,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto15-4.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto15-4.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Gomirica de Naranja</a>
 				</div>
@@ -76,7 +76,7 @@ Pendiente-Repetido -->
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a><img src="img/productos/producto16-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto16-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Gomirica de Durazon</a>
 				</div>
@@ -85,7 +85,7 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<a><img src="img/productos/producto17-1.jpg" class="img-responsive" alt="  "/></a>
+				<img src="img/productos/producto17-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
 					<a>Salado con limon</a>
 				</div>
