--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 		</div>
 		<div class="col-md-7 about-grid">
 							<h3>Historia de Saladitos Sabroricos</h3>
-							<p>Los fundadores de esta gran empresa de sabrosos dulces, iniciaron en la decada de los 70 en la ciudad de tijuana, entrando a la industria de los dulces con aproximadamente 10 productos, como saladitos con chile, sal, limón, al igual con el chamoy. sus clientes potenciales, eran dulcerias o tiendas establecidas, conforme se fue avanzando,  fue incrementando la variedad de productos  y la calidad de sabor haciendo que los dulces sabroricos cruzaran fronteras.</p>
-							<p>Tras pasar a manos de el actual dueño de la  empresa, Miguel Camacho, modernizo la empresa, poniendo una mejor calidad en sabor y presentacion al igual, registrando la marca de manera oficial y estableciendo una fabrica.
-							Adoptando a un Koala como la mascota de Saladitos Sabroricoss</p>
+								<p>Los fundadores de esta gran empresa de sabrosos dulces, iniciaron en la década de los 70 en la ciudad de tijuana, entrando a la industria de los dulces con aproximadamente 10 productos, como saladitos con chile, sal, limón, al igual con el chamoy. sus clientes potenciales, eran dulcerias o tiendas establecidas, conforme se fue avanzando,  fue incrementando la variedad de productos  y la calidad de sabor haciendo que los dulces sabroricos cruzaran fronteras.</p>
+								<p>Tras pasar a manos de el actual dueño de la  empresa, Miguel Camacho, modernizó la empresa, poniendo una mejor calidad en sabor y presentación al igual, registrando la marca de manera oficial y estableciendo una fábrica.
+								Adoptando a un Koala como la mascota de Saladitos Sabroricoss</p>
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -48,8 +48,8 @@
 								<p>1</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Presencia en Dulcerias de prestigio y Cines</a></h4>
-								<p>En grandes dulcerias y Cines de la region puedes encontrar los productos deliciosos que te encantan, disponibles siempre para disfrutar mientras vez una pelicula o para algun evento. </p>
+								<h4><a href="single.html">Presencia en Dulcerías de prestigio y Cines</a></h4>
+								<p>En grandes dulcerías y Cines de la región puedes encontrar los productos deliciosos que te encantan, disponibles siempre para disfrutar mientras ves una película o para algún evento.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -58,8 +58,8 @@
 								<p>2</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Exportacion a Estados Unidos</a></h4>
-								<p>La calidad y sabor de los productos hablan por si solos, y nos han abierto puertas al extranjero, donde actualmente se distribuyen productos de la deliciosa gama de Saladitos Sabroricos. </p>
+								<h4><a href="single.html">Exportación a Estados Unidos</a></h4>
+								<p>La calidad y sabor de los productos hablan por sí solos, y nos han abierto puertas al extranjero, donde actualmente se distribuyen productos de la deliciosa gama de Saladitos Sabroricos. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -68,8 +68,8 @@
 								<p>3</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Proxima apertura de venta a granel</a></h4>
-								<p>Los productos de Saladitos Sabroricos mas deliciosos que nunca, ahora disponibles en venta individual a granel para todas las personas, tambien muy pronto en tiendas de autoservicio. </p>
+								<h4><a href="single.html">Próxima apertura de venta a granel</a></h4>
+								<p>Los productos de Saladitos Sabroricos más deliciosos que nunca, ahora disponibles en venta individual a granel para todas las personas, también muy pronto en tiendas de autoservicio. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -79,7 +79,7 @@
 				<h3 class="tittle t-four">BENEFICIOS DE SER CLIENTE DE SALADITOS SABRORICOS</h3>
 			<div class="advn-two">
 						<h4>Calidad y sabor en los productos con un servicio personalizado.</h4>
-						<p>En Saladitos Sabroricos nos adapatamos a tus necesidades y estamos interesados en escucharte, contactanos para mas informacion, o ve directamente a la seccion de COTIZA.</p>
+						<p>En Saladitos Sabroricos nos adaptamos a tus necesidades y estamos interesados en escucharte, contactanos para mas informacion, o ve directamente a la sección de COTIZA.</p>
 						
 						<ul>
 							<li><a href="#cotizacion">¡Cotiza ahora!</a></li>
