--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@ Pendiente-Repetido -->
 					<a> Serpentina con saladillos</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Sabor clasico, pero mas delicioso que nunca, ¡Sabrorico!</p>
+				<p class="erat">Sabor clásico, pero más delicioso que nunca, ¡Sabrorico!</p>
 				</div>
 			</div>
 			<div class="blog-post">
@@ -91,7 +91,7 @@ Pendiente-Repetido -->
 			<div class="blog-post">
 				<img src="img/productos/producto5-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
-					<a> Gomirica de guzano</a>
+					<a> Gomirica de gusano</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">¡Las favoritas de los niños! Gomiricas picositas y dulcesitas</p>
