--- a/cotizacion.html
+++ b/cotizacion.html
@@ -115,7 +115,7 @@ opacity: .2;
 	            		<a class="filter" ng-click="busqueda=''">Todos</a> / 
 	            		<a class="filter" ng-click="busqueda='picosito'">Picositos</a> / 
 	            		<a class="filter" ng-click="busqueda='salado'">Salados</a> / 
-	            		<a class="filter" ng-click="busqueda='tamarindo'">Tamarindo</a>
+	            		<!-- <a class="filter" ng-click="busqueda='tamarindo'">Tamarindo</a> -->
 	            	</div>
 	      </div>
 	      <script>
@@ -135,7 +135,6 @@ opacity: .2;
 	                	</div>
 	                	<div class="cotiza-box">
 	                		<p class=""><strong>{{dulce.nombreDulce}}</strong></p>
-	                		<p class="">Descripcion</p>
 	                	</div>
 	                </div>
 	            </div>
