--- a/services.html
+++ b/services.html
@@ -12,8 +12,8 @@
 				<div class="ser-first-grids">
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>DISTRIBUCION</h3>
-						<p>¿Estas interesado en distribuir deliciosos productos?, Saladitos Sabroricos te espera, contacta con nosotros. </p>
+						<h3>DISTRIBUCIÓN</h3>
+						<p>¿Estás interesado en distribuir deliciosos productos?, Saladitos Sabroricos te espera, contacta con nosotros.</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
@@ -22,13 +22,13 @@
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>FABRICACION</h3>
-						<p>Estamos a disposicion de pedidos especiales, ya que hacer deliciosos dulces es nuestra especialidad, contactanos siempre</p>
+						<h3>FABRICACIÓN</h3>
+						<p>Estamos a disposición de pedidos especiales, ya que hacer deliciosos dulces es nuestra especialidad, contactanos siempre</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>A GRANEL</h3>
-						<p>A cualquier hora, en cualquier momento del dia, disfruta de tus productos sabroricos, para compartir o para saborear solo</p>
+						<p>A cualquier hora, en cualquier momento del día, disfruta de tus productos sabroricos, para compartir o para saborear solo.</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -40,8 +40,8 @@
 <div class="services">
 	<div class="container">
 		<div class="services-info">
-			<h3 class="tittle">LOS MAS VENDIDOS</h3>
-			<p class="col-md-12 col-ls-12">Los mas pedidos, los preferidos del publico y los mas vendidos, no quiere decir que sean los mejores, todos los productos Saladitos Sabroricos tienen un alto estandar de sabor y calidad, es cuestion de gustos y preferencias, el publico asi lo eligio, nuestros seis productos mas vendidos.</p>
+			<h3 class="tittle">LOS MÁS VENDIDOS</h3>
+			<p class="col-md-12 col-ls-12">Los más pedidos, los preferidos del público y los más vendidos, no quiere decir que sean los mejores, todos los productos Saladitos Sabroricos tienen un alto estándar de sabor y calidad, es cuestion de gustos y preferencias, el publico asi lo eligio, nuestros seis productos más vendidos.</p>
 		</div>
 		<br>
 		<div class="services-grids">
@@ -64,7 +64,7 @@ Top mas vendidos
 					</div>
 					<div class="services-right">
 						<h3>MANGO CON CHILE</h3>
-						<p>El favorito de las frutas, el delicioso mango con chile preferido por los jovenes y los adultos, mango con chile llego para quedarse</p>
+						<p>El favorito de las frutas, el delicioso mango con chile preferido por los jóvenes y los adultos, mango con chile llegó para quedarse</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -76,7 +76,7 @@ Top mas vendidos
 						<!-- <h3>GOMIRICAS DE DURAZNO</h3>
 						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p> -->
 						<h3>RIELITO CON CHILE</h3>
-						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
+						<p>Los rielitos se han mantenido en el gusto de la gente por décadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -108,7 +108,7 @@ Top mas vendidos
 					</div>
 					<div class="services-right">
 						<h3>GOMIRICA DE SANDIA</h3>
-						<p>Consiéntete con una mas de nuestras exquisitas gomiricas.</p>
+						<p>Consiéntete con una más de nuestras exquisitas gomiricas.</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -118,7 +118,7 @@ Top mas vendidos
 					</div>
 					<div class="services-right">
 						<h3>GOMIRICAS DE GUSANITO</h3>
-						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
+						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinación agridulce que les encanta</p>
 						<!-- <h3>GOMIRICAS DE NARANJA</h3>
 						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
 					 --></div>
@@ -142,7 +142,7 @@ Top mas vendidos
 					</div>
 					<div class="services-right">
 						<h3>PULPA TOCHITO PARA ESCARCHAR</h3>
-						<p>Las favoritas de los papas, la Pulpa tochito para escarchar es deliciosamente Sabroricas, combinacion agridulce perfecta para cualquier bebida</p>
+						<p>Las favoritas de los papas, la Pulpa tochito para escarchar es deliciosamente Sabroricas, combinación agridulce perfecta para cualquier bebida</p>
 						<!-- <h3>GOMIRICAS DE NARANJA</h3>
 						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
 					 --></div>
