--- a/blog2.html
+++ b/blog2.html
@@ -41,10 +41,10 @@ Pendiente-Repetido -->
 			<div class="blog-post">
 					<img src="img/productos/producto6-1.jpg" class="img- zoom-imgresponsive" alt=""/>
 					<div class="text">
-						<a> Saladito con Chile y Limon</a>
+						<a> Saladito con Chile y Limón</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">El delicioso Saladito con Chile y Limon, ¡Sabrorrrico!</p>
+					<p class="erat">El delicioso Saladito con Chile y Limón, ¡Sabrorrrico!</p>
 					</div>
 			</div>
 			<div class="blog-post">
@@ -53,7 +53,7 @@ Pendiente-Repetido -->
 						<a>Saladito con sal</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">De los clasicos, el Saladito con sal, el mismo sabor de siempre, pero ahora ¡con un toque Sabrorico!</p>
+					<p class="erat">De los clásicos, el Saladito con sal, el mismo sabor de siempre, pero ahora ¡con un toque Sabrorico!</p>
 					</div>
 			</div>
 		</div>
