--- a/blog3.html
+++ b/blog3.html
@@ -78,19 +78,19 @@ Pendiente-Repetido -->
 			<div class="blog-post">
 				<img src="img/productos/producto16-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
-					<a>Gomirica de Durazon</a>
+					<a>Gomirica de Durazno</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">La favorita de todas las edades, la clasica gomita de durazno con el delicioso sabor Sabrorico</p>
+				<p class="erat">La favorita de todas las edades, la clásica gomita de durazno con el delicioso sabor Sabrorico</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<img src="img/productos/producto17-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
-					<a>Salado con limon</a>
+					<a>Salado con limón</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Rico saladito con limon, para mezclarlo con lo que quieras, ¡Delicioso!</p>
+				<p class="erat">Rico saladito con limón, para mezclarlo con lo que quieras, ¡Delicioso!</p>
 				</div>
 			</div>
 		</div>
