Nombres a productos de Galeria y agregar producto Chamoy

--- a/blog2.html
+++ b/blog2.html
@@ -68,12 +68,12 @@ Pendiente-Repetido -->
 				</div>
 			</div>
 			<div class="blog-post">
-				<img src="img/productos/producto9-1.jpg" class="img-responsive zoom-img" alt="  "/>
+				<img src="img/productos/producto21-3.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
-					<a>Producto repetido</a>
+					<a>Chamoy Sabrorico</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">¡Delicioso!</p>
+				<p class="erat">¡Delicioso Chamoy! para acompañar cualquier antojo, hacerlo rico y picosito</p>
 				</div>
 			</div>
 		</div>
