--- a/blog3.html
+++ b/blog3.html
@@ -78,7 +78,7 @@ Pendiente-Repetido -->
 			<div class="blog-post">
 				<img src="img/productos/producto16-1.jpg" class="img-responsive zoom-img" alt="  "/>
 				<div class="text">
-					<a>Gomirica de Durazon</a>
+					<a>Gomirica de Durazno</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">La favorita de todas las edades, la clasica gomita de durazno con el delicioso sabor Sabrorico</p>
