--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 			</div>
 		  <h3 class="tittle">VER EN EL MAPA</h3>
 		    <div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3363.244298265738!2d-116.93733078567345!3d32.54632470302121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d947088a6616cd%3A0x972ef48fa8aa44db!2sAv+Ricardo+Castro+319%2C+Nueva+Tijuana%2C+22435+Tijuana%2C+B.C.!5e0!3m2!1ses-419!2smx!4v1451519353654" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>				
 			</div>
 	</div>
 </div>
