Zoom restored Blog 2 image 1

--- a/blog2.html
+++ b/blog2.html
@@ -39,7 +39,7 @@ Pendiente-Repetido -->
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<img src="img/productos/producto6-1.jpg" class="img- zoom-imgresponsive" alt=""/>
+					<img src="img/productos/producto6-1.jpg" class="img-responsive zoom-img" alt=""/>
 					<div class="text">
 						<a> Saladito con Chile y Limón</a>
 					</div>
