--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   #text-white{
     color: white;
   }
-
+  .logi{
+  max-width: 110px;
+  }
   </style>
-
 </head>
 
 <!-- define angular controller -->
@@ -91,10 +92,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="logo-head">
   <div class="container">
     <div class="logo">
-      <h1><a href="#inicio"><img src="images/logo.png" class="img-responsive"/></a></h1>
+    <img src="images/logo.jpg" class="logi">
     </div>
     <div class="navigation">
-        <span class="menu"><img src="images/menu.png" alt=""/></span>
+        <span class="menu"><img src="images/menu.png" class="img-responsive"/></span>
         <div class="clearfix"></div>
         <ul class="nav1">
           <li><a class="hvr-overline-from-center button2" href="#acerca">ACERCA</a></li>
