--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   .logi{
   max-width: 110px;
   }
+
+  @media screen and (max-width: 480px) {
+    .logi{
+     max-width: 50px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .logi{
+     max-width: 50px;
+    }
+  }
   </style>
 </head>
 
