--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 			<div class="main">
 				<div class="col-md-3 view-grid">
 					<div class="view fifth-effect">
-						 <a title="Full Image"><img src="img/team-1.jpg" alt="" /></a>
+						 <img src="images/int.jpg" alt="" />
 						 <div class="mask"></div>
 					</div> 
 				</div>
