--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
 <!--start-team-->
 <div class="team">
 	<div class="container">
-		<h3 class="tittle t-two">Nuestro Koala</h3>
+		<h3 class="tittle t-two">Nuestro equipo Koala</h3>
 			<div class="main">
-				<div class="col-md-3 view-grid">
+				<div class="col-md-12 col-sm-12 col-xs-12">
 					<div class="view fifth-effect">
-						 <a title="Full Image"><img src="img/team-1.jpg" alt="" /></a>
+						 <img src="images/fam.png" alt="" />
 						 <div class="mask"></div>
 					</div> 
 				</div>
