--- a/blog2.html
+++ b/blog2.html
@@ -73,7 +73,7 @@ Pendiente-Repetido -->
 					<a>Chamoy Sabrorico</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">¡Delicioso Chamoy! para acompañar cualquier antojo, hacerlo rico y picosito</p>
+				<p class="erat">¡Delicioso Chamoy! para acompañar cualquier antojo, hacerlo rico y picosito, disponible tambien con ciruela, salado y mango</p>
 				</div>
 			</div>
 		</div>
