--- a/gallery3.html
+++ b/gallery3.html
@@ -37,7 +37,7 @@
                         <img src="img/productos/producto21-3.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>CHAMOY</h4>
-                        <p>Para acompañar cualquier cosa, ponle el sabor picosito y acidito de ¡Chamoy Sabrorico!</p>
+                        <p>Para acompañar cualquier cosa, ponle el sabor picosito y acidito de ¡Chamoy Sabrorico!, disponible tambien con ciruela, salado y mango</p>
                     </div></a>
                 </div>
                 <!-- 
