--- a/inicio.html
+++ b/inicio.html
@@ -68,8 +68,8 @@
 		<div class="welcome-head">
 			<h3 class="tittle">Bienvenido</h3>
 			<div class="wel-img mask text-center">
-					<a href="single.html" class="mask">
-						<img class="img-responsive zoom-img" src="imag/productos/sabroricos14-1.jpg" alt=""/></a>
+					<a class="mask">
+						<img class="img-responsive zoom-img" src="img/productos/producto14-1.jpg" alt=""/></a>
 			</div>
 			<h4>VARIEDAD CON SABOR UNICO Y DELICIOSO, ¡SALADITOS SABRORICOS!</h4>
 			<p>El sabor único de nuestros productos se encuentra en 27 presentaciones, productos de calidad con un gran sabor que se sorprenderá, déjate envolver por el inigualable sabor de Saladitos Sabroricos, hay uno para ti, ¡pruébalos!</p>
