--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <img src="images/logo.jpg" class="logi">
     </div>
     <div class="navigation">
-        <span class="menu"><img src="images/menu.png" class="img-responsive"/></span>
+        <span class="menu"><img src="images/menu.png" href="#" class="img-responsive"/></span>
         <div class="clearfix"></div>
         <ul class="nav1">
           <li><a class="hvr-overline-from-center button2" href="#acerca">ACERCA</a></li>
