--- a/index.html
+++ b/index.html
@@ -80,18 +80,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     color: white;
   }
   .logi{
-  max-width: 110px;
+  max-width: 95px;
   }
-
   @media screen and (max-width: 480px) {
     .logi{
      max-width: 50px;
     }
   }
-
   @media screen and (max-width: 600px) {
     .logi{
      max-width: 50px;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .logi{
+     max-width: 50px;
+    }
+  }
+  @media screen and (max-width: 1200px) and (min-width: 800px) {
+    .logi{
+     display: none;
     }
   }
   </style>
@@ -107,11 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <img src="images/logo.jpg" class="logi">
     </div>
     <div class="navigation">
-<<<<<<< HEAD
         <span class="menu"><img src="images/menu.png" class="img-responsive"/></span>
-=======
-        <span class="menu"><img src="images/menu.png" href="#" class="img-responsive"/></span>
->>>>>>> 5c18686aefb1cb8ed12bdfefab428066005138fd
         <div class="clearfix"></div>
         <ul class="nav1">
           <li><a class="hvr-overline-from-center button2" href="#acerca">ACERCA</a></li>
